Fixed event_button spacing on event show, signed in and out

--- a/app/assets/stylesheets/event_m.css
+++ b/app/assets/stylesheets/event_m.css
@@ -221,27 +221,24 @@ body {
 
 
 #event_buttons_1 {
-	margin: auto;
 	text-align: left;
 	margin-top: -48px;
-	margin-left: -45px;
+	margin-left: 10px;
 	position: absolute;		
 }
 
 #event_buttons_2 {
-	margin: auto;
 	text-align: left;
 	margin-top: -48px;
-	margin-left: -45px;
-	position: absolute;	
+	margin-left: 10px;
+	position: absolute;
 }
 
 
 #event_buttons_3 { 
-	margin: auto;
 	text-align: left;
-	margin-top: -48px; 
-	margin-left: -45px; 
+	margin-top: -48px;
+	margin-left: 10px;
 	position: absolute;
 } 
 
@@ -253,11 +250,7 @@ body {
 	border: 1px solid #fff;
 	color: #2c3e50;
 	padding: 10px;
-	width: 200px;
-	margin-left: 55px;
-	margin-right: 55px;
-	
-	
+	width: 200px;	
 }
 
 /*
@@ -282,11 +275,7 @@ body {
 	border: 1px solid #2c3e50;
 	color: #fff;
 	padding: 10px;
-	width: 200px;
-	margin-left: 55px;
-	margin-right: 55px;
-	
-	
+	width: 200px;	
 }
 
 
@@ -313,8 +302,6 @@ body {
 	color: #fff;
 	padding: 10px;
 	width: 200px;
-	margin-left: 55px;
-	margin-right: 55px;
 }
 
 
