--- a/app/assets/stylesheets/event_m_so.css
+++ b/app/assets/stylesheets/event_m_so.css
@@ -163,28 +163,25 @@ body {
 
 
 #event_buttons_1 {
-	margin: auto;
 	text-align: left;
 	margin-top: -48px;
-	margin-left: -45px;
-	position: absolute;		
+	margin-left: 10px;
+	position: absolute;	
 }
 
 #event_buttons_2 {
-	margin: auto;
 	text-align: left;
 	margin-top: -48px;
-	margin-left: -45px;
+	margin-left: 10px;
 	position: absolute;	
 }
 
 
 #event_buttons_3 { 
-	margin: auto;
 	text-align: left;
-	margin-top: -48px; 
-	margin-left: -45px; 
-	position: absolute;
+	margin-top: -48px;
+	margin-left: 10px;
+	position: absolute;	
 } 
 
 .go_button {
@@ -196,10 +193,6 @@ body {
 	color: #2c3e50;
 	padding: 10px;
 	width: 200px;
-	margin-left: 55px;
-	margin-right: 55px;
-	
-	
 }
 
 /*
@@ -225,10 +218,6 @@ body {
 	color: #fff;
 	padding: 10px;
 	width: 200px;
-	margin-left: 55px;
-	margin-right: 55px;
-	
-	
 }
 
 
@@ -255,8 +244,6 @@ body {
 	color: #fff;
 	padding: 10px;
 	width: 200px;
-	margin-left: 55px;
-	margin-right: 55px;
 }
 
 
